--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     ></div>
 
     <div class="cart-overlay">
-        <div class="cart-design fixed top-0 right-0 w-full h-full overflow-scroll z-50 bg-gray-200 p-6 transition-all duration-300 transform translate-x-full">
+        <div class="cart-design">
             <span >
                 <ion-icon class="close-cart" name="close-outline" id="close-cart"></ion-icon>
             </span>
